@@ -135,7 +135,7 @@ void mk_shellcmdlist(char *v)
     }
     if (*q)
         n++;
-    cmdlist = (char **) xmalloc(n  * sizeof(char *));
+    cmdlist = (char **) xmalloc(n * sizeof (char *));
     p = cmdlist;
     q = v;
     while ((r = strchr(q, ',')) != 0) {
@@ -504,13 +504,13 @@ main (int ac, string *av)
           isalpha(av[ac-1][0]) &&
           (av[ac-1][1] == ':') &&
           (av[ac-1][2] == '\\')) {
-      for (pp=av[ac-1]+2; *pp; pp++) {
-        if (IS_KANJI(pp)) {
-          pp++;
-          continue;
-        }
-        if (*pp == '\\')
-          *pp = '/';
+        for (pp=av[ac-1]+2; *pp; pp++) {
+          if (IS_KANJI(pp)) {
+            pp++;
+            continue;
+          }
+          if (*pp == '\\')
+            *pp = '/';
         }
       }
     }
