@@ -1,3 +1,7 @@
+2014-11-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* luatex.c: Indentation.
+
 2014-10-31  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* luatex.[ch] [W32TEX]: Handle DLLPROC as for TeX & Co.
